# .vscode

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  ZERO_CHECK.vcxproj  dep-spdlog.vcxproj  dep-spdlog.vcxproj.filters  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
